--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,6 +1,11 @@
 @import 'pop-up';
 @import '_main';
 @import 'menu';
+@import 'forms';
 @import 'cadastrar';
 @import 'listar';
 @import 'footer';   
+@import 'field-sobre';   
+@import 'landing-page';   
+@import 'button-top';   
+@import 'excluir';
