--- a/assets/css/_listar.scss
+++ b/assets/css/_listar.scss
@@ -1,63 +1,73 @@
-.listar:nth-child(2) {
-    margin-top: 100px;
-}
 
-.listar {
-    width: 70vw;
-    height: auto;
-    display: none;
-    background: none;
-    box-shadow: none;
+.field-lists {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 
-    & > div {
-        width: 95%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-
-        div {
-            width: 100%;
-            display: flex;
-            justify-content: space-between;
-
-            .tabela {
-                text-align: start;
-                margin-bottom: 15px;
-                color: #565656;
-                font-weight: bolder;
-                font-size: 30px;
-                margin-left: 70px;
-            }
-
-            .btn-ocultar {
-                font-size: 20px;
-                font-weight: bolder;
-                cursor: pointer;
-                color: #008eff;
-            }
-        }
-
-        table {
-            width: 100%;
-            margin-bottom: 100px;
     
-            tr {
-                box-shadow: 0px 50px 80px rgb(60, 60, 60);
-
-                th {
-                    color: white;
-                    padding: 10px 40px;
-                    background: #008eff;
-                    border-radius: 5px;
+    .listar:nth-child(2) {
+        margin-top: 100px;
+    }
+    
+    .listar {
+        width: 70vw;
+        height: auto;
+        display: none;
+        background: none;
+        box-shadow: none;
+    
+        & > div {
+            width: 95%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+    
+            div {
+                width: 100%;
+                display: flex;
+                justify-content: space-between;
+    
+                .tabela {
+                    text-align: start;
+                    margin-bottom: 15px;
+                    color: #565656;
+                    font-weight: bolder;
+                    font-size: 30px;
+                    margin-left: 70px;
                 }
-
-                td {
-                    color: gray;
-                    text-align: center;
-                    padding: 10px 40px;
-                    background: white;
-                    border-radius: 5px;
-                    font-size: 15px;
+    
+                .btn-ocultar {
+                    font-size: 20px;
+                    font-weight: bolder;
+                    cursor: pointer;
+                    color: #008eff;
+                }
+            }
+    
+            table {
+                width: 100%;
+                margin-bottom: 100px;
+        
+                tr {
+                    box-shadow: 0px 50px 80px rgb(60, 60, 60);
+    
+                    th {
+                        color: white;
+                        padding: 10px 40px;
+                        background: #008eff;
+                        border-radius: 5px;
+                    }
+    
+                    td {
+                        color: gray;
+                        text-align: center;
+                        padding: 10px 40px;
+                        background: white;
+                        border-radius: 5px;
+                        font-size: 15px;
+                    }
                 }
             }
         }
