--- a/assets/css/_listar.scss
+++ b/assets/css/_listar.scss
@@ -51,13 +51,13 @@
                 margin-bottom: 100px;
         
                 tr {
-                    box-shadow: 0px 50px 80px rgb(60, 60, 60);
-    
-                    th {
+                    filter: drop-shadow(0 10px 15px rgba(128, 128, 128, 0.467));
+
+                    th {    
                         color: white;
                         padding: 10px 40px;
                         background: #008eff;
-                        border-radius: 5px;
+                        border-radius: 5px; 
                     }
     
                     td {
